--- a/build.properties.sample
+++ b/build.properties.sample
@@ -10,7 +10,7 @@
 # as a single archive from the Struts downloads directory.
 # Requirements for the Nightly Build may change between releases and betas.
 #
-# $Id: build.properties.sample,v 1.47 2003/08/23 03:01:24 rleland Exp $
+# $Id: build.properties.sample,v 1.48 2003/08/28 01:51:23 rleland Exp $
 # -----------------------------------------------------------------------------
 compile.deprecation=true
 
@@ -102,9 +102,10 @@ antlr.jar = ../../../antlr-2.7.2/antlr.jar
 # you do not have Checkstyle installed, do not set this property.
 checkstyle.jar = /Java/checkstyle-2.4/checkstyle-all-2.4.jar
 
-# The JAR file containing the PMD package version 1.01, if available. If
+# The Directory containing the PMD package distribution, 1.2.1, if available. If
 # you do not have PMD installed, do not set this property.
-pmd.jar = /Java/pmd/lib/pmd-1.01.jar
+pmd.home = /Java/Programs/SourceForge/pmd-1.2.1
+
 #############################Maven Variables #######################################
 # CVS Start Change Log date
 cvs.start=17 April 2003
@@ -113,6 +114,8 @@ cvs.start=17 April 2003
 # If you are using ssh tunneling & have a .cvspass file setup
 cvs.developer.host=localhost
 cvs.developer.id=rleland
+
+#############################End of Maven Variables #######################################
 
 # Properties related to Struts Contrib
 # -----------------------------------------
