*** empty log message ***

--- a/build.properties
+++ b/build.properties
@@ -29,5 +29,5 @@ source.jdtcore.jar = batch/,\
                      search/
 source.jdtCompilerAdapter.jar = antadapter/
 jars.compile.order=jdtcore.jar,jdtCompilerAdapter.jar
-jars.extra.classpath=platform:/plugin/org.apache.ant/ant.jar
+jars.extra.classpath=platform:/plugin/org.apache.ant/lib/ant.jar
 src.includes=about.html,schema/
