Bug 18255 Provide Japanese resources updates for Struts Patches submitted by Tetsuo Ajima, Tatsuo Takahashi, Satoshi Hioki Yoshinori Ashizawa
Thank you very much !

--- a/src/validator/org/apache/struts/webapp/validator/ApplicationResources.properties
+++ b/src/validator/org/apache/struts/webapp/validator/ApplicationResources.properties
@@ -77,3 +77,4 @@ jsTypeForm.description=with JavaScript Validation and Server Validation
 # Locale Form
 localeForm.fr=There are some differences on the Registration Form, JavaScript Registration Form, and Multi-page Registration form (see /WEB-INF/validation.xml).  On the Type Form and JavaScript Type Form the integer field should fall in a range of 50-60 and the date field should have a format of 'dd.MM.yyyy'.
 localeForm.frCA=On the JavaScript Type Form the integer field should fall in a range of 100-200 and the date field should have a format of 'dd-MM-yyyy'.
+localeForm.ja=On the JavaScript Type Form the integer field should fall in a range of 400-700 and the date field should have a format of 'yyyy/MM/dd'.
