Removed unused imports in the chainsaw package. Added entry to default chainsaw properties (prevents exceptions for new users)

--- a/src/java/org/apache/log4j/chainsaw/prefs/default.properties
+++ b/src/java/org/apache/log4j/chainsaw/prefs/default.properties
@@ -14,3 +14,4 @@ table.columns.order=ID,Timestamp,Level,Logger,Thread,Message,NDC,MDC,Throwable,C
 table.columns.widths=50,150,50,100,150,300,150,100,300,150,100,100,100,100
 StatusBar=true
 level.display=icons
+SavedConfigs.Size=0
