* src/i18n/ScarabBundle_en_US.properties   IssueLimitExceeded: New resource added to alert the user when more   than the configured number of artifacts is selected for an action.
* src/templates/macros/GlobalMacros.vm
  #processQueryResults(): One more argument (issue count) is added to
  the macro to conditionally display the "Xxx all" options.


* src/templates/screens/IssueList.vm
  #processQueryResults() is called regardless of the number of
  artifacts in the search result. Pass that number to the macro.


* src/conf/Scarab.properties
  scarab.issue.max.view, scarab.issue.max.assign,
  scarab.issue.max.move, scarab.issue.max.copy: New properties added
  to configure the max issues that can be viewed/assigned/copied/moved
  simultaneously.


* src/java/org/tigris/scarab/util/ScarabConstants.java
  ISSUE_MAX_VIEW, ISSUE_MAX_ASSIGN, ISSUE_MAX_MOVE, ISSUE_MAX_COPY:
  New constants added to hold the value of the properties mentioned
  above.


* src/java/org/tigris/scarab/actions/Search.java
  doPerform(): Condition added to alert the user when more than the
  configured number of artifacts is selected for an action.


Issue: PCN21658
Submitted by: Venkat
Reviewed by: Daniel Rall

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -350,3 +350,12 @@ template.entry/Wizard3.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.TemplateList.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
+
+# Max number of issues that can be be viewed simultaneously on a single page.
+scarab.issue.max.view=25
+# Max number of issues that can be be simultaneously assigned with users.
+scarab.issue.max.assign=25
+# Max number of issues that can be be moved in one shot.
+scarab.issue.max.move=250
+# Max number of issues that can be be copied in one shot.
+scarab.issue.max.copy=250
