forward port from SCAST_T1_1
Issue number: 21780 - Too many report criteria can lead to a resource
 starvation due to mysql limitations.
 Modified files:
 * src/conf/Scarab.properties - added scarab.report.max.criteria property
   set to a safe value of 5.
 * src/i18n/ScarabBundle_en_US.properties - Added keys for new messages
   regarding the limit: ReportIsTooExpensive,
   ThisAxisMustBeDatesUnlessHeadingsAreRemoved, AvailableNumberHeadings,
   NoMoreHeadings
 * src/java/org/tigris/scarab/actions/ConfigureReport.java -
   doSettype: don't allow switching from a date axis, if the other axis
   already has the maximum headings.
   doGeneratereport: give alert message, if the query was too expensive. This
   is to cover old saved reports that were too complex.
 * src/java/org/tigris/scarab/reports/ReportDefinition.java
   added methods:
   maximumHeadings()
   allowMoreHeadings(ReportAxis axis)
   reportQueryIsExpensive()
   totalAvailableNumberOfHeadings()
   availableNumberOfHeadings(ReportAxis axis)
   totalNumberOfNonDateHeadings()
   numberOfNonDateHeadings(ReportAxis axis)
   to help with calculation and notification of report limits.
 * src/java/org/tigris/scarab/screens/ReportExport.java - doBuildTemplate:
   abort report generation with a message if the definition is too complex.
 * src/java/org/tigris/scarab/util/ScarabConstants.java - added
   REPORT_MAX_CRITERIA constant which can be modified via Scarab.properties
 * src/templates/screens/reports/AxisConfiguration.vm - use methods in
   ReportDefinition to notify user of limits to headings and to hide
   the 'Add headings' button when the limit is reached.
 * src/templates/screens/reports/Report_1.vm - do not allow generation of the
   report if it exceeds limits and give a message to that effect. This is
   for the benefit of previously saved reports and possibly any url hacking.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -359,3 +359,12 @@ scarab.issue.max.assign=25
 scarab.issue.max.move=250
 # Max number of issues that can be be copied in one shot.
 scarab.issue.max.copy=250
+
+#Mysql's (at least, other db's not tested) query optimizer cannot handle more
+#than about 12 inner joins before it exponentially increases the time spent
+#calculating the query plan.  The exact number where this becomes a problem
+#is a function of how long users can be expected to wait as well as how many
+#issues are in the db.  The number of total joins is also important, though
+#the outer joins used in Query do not appear to be as expensive.  These numbers
+#are relatively conservative.
+scarab.report.max.criteria=4
