--- a/src_new/templates/ArgoVersion.template
+++ b/src_new/templates/ArgoVersion.template
@@ -1,4 +1,4 @@
-// $Id: ArgoVersion.template,v 1.5 2003/06/30 18:00:39 linus Exp $
+// $Id: ArgoVersion.template,v 1.6 2003/09/04 16:31:22 thierrylach Exp $
 // Copyright (c) 1996-2002 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
@@ -36,12 +36,13 @@ package org.argouml.application;
 public class ArgoVersion {
     /** Version number
      */
-    public static String VERSION = "@ARGO_RELEASE_VERSION@";
+    public static final String VERSION = "@ARGO_RELEASE_VERSION@";
 
     /** Retrieve the version number.
+     * @return the version number.
      */
     public static String getVersion() {
-	return VERSION;
+	    return VERSION;
     }
 
     /** Don't allow instantiation
