Avoid the "Alert! There was an error processing your query: General error: Too many tables. MySQL can only use 31 tables in a join" error (don't yet know if this is applicable to other DBs):
* src/conf/Scarab.properties
  scarab.query.max.join>: Max number of attribute columns supported for
  query reults.


* src/i18n/ScarabBundle_en_US.properties
  ColumnsDropped: A resource noting that columns were dropped when the
  max number of attribute columns is exceeded.


* src/java/org/tigris/scarab/tools/ScarabRequestTool.java
  initialIssueListColumnsSize: Keep track if the columns were reduced
  to avoid DB limits.

  issueListColumns: Cache list so that we always return the same
  object for all invocations within a single request.

  getRModuleUserAttributes(): Incoporated new members.


* src/java/org/tigris/scarab/util/ScarabConstants.java
  QUERY_MAX_JOIN: Constant for the scarab.query.max.join property.


* src/java/org/tigris/scarab/util/word/IssueSearch.java
* src/templates/screens/IssueList.vm
  Handle possibility of exceeding attribute column limit.


Issue: PCN21631
Submitted by: John McNally

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -351,6 +351,8 @@ template.TemplateList.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 
+scarab.query.max.join=30
+
 # Max number of issues that can be be viewed simultaneously on a single page.
 scarab.issue.max.view=25
 # Max number of issues that can be be simultaneously assigned with users.
