--- a/plugins/org.columba.core.ThinColumbaLookAndFeel/plugin.xml
+++ b/plugins/org.columba.core.ThinColumbaLookAndFeel/plugin.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
-<plugin id="org.columba.core.ThinColumbaLookAndFeel" name="ThinColumba Look And Feel" description="ThinColumba Look And Feel" category="Look and Feel" version="1.0" >
- <extension name="org.columba.core.theme">
-  <theme name="ThinColumba" class="ThinColumbaPlugin"/>
- </extension>
- <runtime type="java" jar="ThinColumbaLookAndFeel.jar"/>
+<plugin name="ThinColumba Look And Feel" description="ThinColumba Look And Feel" id="org.columba.core.ThinColumbaLookAndFeel" version="1.0" category="Look and Feel" enabled="true">
+  <extension name="org.columba.core.theme">
+    <theme name="ThinColumba" class="ThinColumbaPlugin"></theme>
+  </extension>
+  <runtime jar="ThinColumbaLookAndFeel.jar" type="java"></runtime>
 </plugin>
