--- a/plugins/org.columba.core.PythonInterpreter/plugin.xml
+++ b/plugins/org.columba.core.PythonInterpreter/plugin.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
-<plugin id="org.columba.core.PythonInterpreter" name="Python Interpreter" description="adds python plugin support" category="Interpreter Language" version="1.0" >
- <extension name="org.columba.core.interpreter">
-  <interpreter name="python" main_class="org.columba.core.scripting.PythonInterpreterPlugin"  />
- </extension>
- <runtime type="java" jar="PythonInterpreter.jar"/>
+<plugin name="Python Interpreter" description="adds python plugin support" id="org.columba.core.PythonInterpreter" version="1.0" category="Interpreter Language" enabled="true">
+  <extension name="org.columba.core.interpreter">
+    <interpreter main_class="org.columba.core.scripting.PythonInterpreterPlugin" name="python"></interpreter>
+  </extension>
+  <runtime jar="PythonInterpreter.jar" type="java"></runtime>
 </plugin>
