--- a/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/plugin.xml
+++ b/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.example.AddHeaderPOP3PreProcessingFilter" name="Add headerfield POP3 preprocessor" description="Simple Example" category="Examples" version="1.0" >
+<plugin id="org.columba.example.AddHeaderPOP3PreProcessingFilter" name="Add headerfield POP3 preprocessor" description="Simple Example" category="Examples" version="1.0"  enabled="true">
  <extension name="org.columba.mail.pop3preprocessingfilter">
   <pop3preprocessingfilter name="AddHeader" class="AddHeaderPOP3PreProcessingFilterPlugin"/>
  </extension>
