--- a/plugins/org.columba.example.MBOXMailImportFilter/plugin.xml
+++ b/plugins/org.columba.example.MBOXMailImportFilter/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.example.MBOXMailImportFilter" name="MBOXMail Importfilter" description="Import MBOX file" version="1.0" >
+<plugin id="org.columba.example.MBOXMailImportFilter" name="MBOXMail Importfilter" description="Import MBOX file" version="1.0"  enabled="true">
  <extension name="org.columba.mail.import">
   <filter name="ExampleMBOXMailImportFilter" class="MBOXMailImportFilter"/>
  </extension>
