--- a/plugins/org.columba.example.PythonHelloWorldAction/plugin.xml
+++ b/plugins/org.columba.example.PythonHelloWorldAction/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.example.PythonHelloWorldAction" name="Python Hello World Plugin" description="Simple Example" category="Examples" version="1.0" >
+<plugin id="org.columba.example.PythonHelloWorldAction" name="Python Hello World Plugin" description="Simple Example" category="Examples" version="1.0" enabled="true" >
  <extension name="org.columba.core.action">
   <action name="PythonHelloWorld" class="PythonHelloWorldAction.py" />
  </extension>
- <extension name="org.columba.mail.menu">
-  <menu name="menu_utilities" extensionpoint="top">
-   <menu name="python">
+ <extension name="org.columba.core.menu">
+  <menu name="menu_utilities" extensionpoint="bottom">
+   <menu name="Python Hello World SubMenu">
   	<menuitem action="org.columba.example.PythonHelloWorldAction$PythonHelloWorld"/>
   	<separator/>
   	</menu>
