--- a/build.xml
+++ b/build.xml
@@ -789,96 +789,7 @@
 <target name="clean.website" depends="clean,compile.website"/>
 <target name="compile.website"
         description="Compile main website">
-    <!-- Create the taglib documentation -->
-    <style   basedir="${doc.dir}" destdir="${build.home}/documentation"
-           extension=".html" style="${doc.dir}/stylesheets/struts.xsl" includes="*.xml"/>
-    <!-- Create the faqs -->
-    <style   basedir="${doc.dir}/faqs"
-             destdir="${build.home}/documentation/faqs"
-           extension=".html" style="${doc.dir}/stylesheets/faqs.xsl"
-            includes="*.xml"/>
-    <!-- Create the news -->
-    <style   basedir="${doc.dir}/news"
-             destdir="${build.home}/documentation/news"
-           extension=".html" style="${doc.dir}/stylesheets/news.xsl"
-            includes="*.xml"/>
-    <!-- Create the proposals -->
-    <style   basedir="${doc.dir}/proposals"
-             destdir="${build.home}/documentation/proposals"
-           extension=".html" style="${doc.dir}/stylesheets/proposals.xsl"
-            includes="*.xml"/>
-    <!-- Create the resources -->
-    <style   basedir="${doc.dir}/resources"
-             destdir="${build.home}/documentation/resources"
-           extension=".html" style="${doc.dir}/stylesheets/resources.xsl"
-            includes="*.xml"/>
-    <!-- Create the user guide -->
-    <!--   ... browser version ... -->
-    <style   basedir="${doc.dir}/userGuide"
-             destdir="${build.home}/documentation/userGuide"
-           extension=".html" style="${doc.dir}/stylesheets/userGuide.xsl"
-            includes="*.xml">
-      <param name="relative-path" expression=".."/>
-    </style>
-    <!--   ... printer version ... -->
-    <mkdir       dir="${build.home}/documentation/userGuide/printer"/>
-    <style   basedir="${doc.dir}/userGuide"
-             destdir="${build.home}/documentation/userGuide/printer"
-           extension=".html" style="${doc.dir}/stylesheets/userGuide.xsl"
-            includes="*.xml">
-      <param name="relative-path" expression="../.."/>
-      <param name="project-menu" expression="nomenu"/>
-    </style>
-    <!-- Copy the basic documentation files -->
-    <copy      todir="${build.home}/documentation">
-      <fileset   dir="${doc.dir}">
-        <include name="**/*.css"/>
-        <include name="**/*.gif"/>
-        <include name="**/*.html"/>
-        <include name="**/*.jpg"/>
-        <include name="**/*.js"/>
-      </fileset>
-    </copy>
-    <!-- Copy the faq files -->
-    <copy      todir="${build.home}/documentation/faqs">
-      <fileset   dir="${doc.dir}/faqs">
-        <include name="**/*.css"/>
-        <include name="**/*.gif"/>
-        <include name="**/*.html"/>
-        <include name="**/*.jpg"/>
-        <include name="**/*.js"/>
-      </fileset>
-    </copy>
-    <!-- Copy the proposal files -->
-    <copy      todir="${build.home}/documentation/proposals">
-      <fileset   dir="${doc.dir}/proposals">
-        <include name="**/*.css"/>
-        <include name="**/*.gif"/>
-        <include name="**/*.html"/>
-        <include name="**/*.jpg"/>
-        <include name="**/*.js"/>
-      </fileset>
-    </copy>
-    <!-- Copy the resource files -->
-    <copy      todir="${build.home}/documentation/resources">
-      <fileset   dir="${doc.dir}/resources">
-        <include name="**/*.css"/>
-        <include name="**/*.gif"/>
-        <include name="**/*.html"/>
-        <include name="**/*.jpg"/>
-        <include name="**/*.js"/>
-      </fileset>
-    </copy>
-    <!-- Copy the basic user guide files -->
-    <copy      todir="${build.home}/documentation/userGuide">
-      <fileset   dir="${doc.dir}/userGuide">
-        <include name="**/*.css"/>
-        <include name="**/*.gif"/>
-        <include name="**/*.html"/>
-        <include name="**/*.jpg"/>
-        <include name="**/*.js"/>
-      </fileset>
-    </copy>
+        <ant antfile="build-webapps.xml" target="compile.docs"/>
 </target>
 
 
