--- a/src_new/templates/ArgoVersion.template
+++ b/src_new/templates/ArgoVersion.template
@@ -1,4 +1,4 @@
-// $Id: ArgoVersion.template,v 1.6 2003/09/04 16:31:22 thierrylach Exp $
+// $Id: ArgoVersion.template,v 1.7 2003/09/08 14:20:27 thierrylach Exp $
 // Copyright (c) 1996-2002 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
@@ -35,8 +35,10 @@ package org.argouml.application;
  */
 public class ArgoVersion {
     /** Version number
+     *
+     * @deprecated to become "private static final" in the future - use getVersion() instead.
      */
-    public static final String VERSION = "@ARGO_RELEASE_VERSION@";
+    public static String VERSION = "@ARGO_RELEASE_VERSION@";
 
     /** Retrieve the version number.
      * @return the version number.
