--- a/src_new/build.xml
+++ b/src_new/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id: build.xml,v 1.125 2003/09/08 19:48:59 thierrylach Exp $
+<!-- $Id: build.xml,v 1.126 2003/09/08 19:55:04 thierrylach Exp $
 This requires ANT 1.4.1
 
 if you get a message like:
@@ -730,7 +730,7 @@ Most useful targets are:
         <formatter type="xml"/>
       <batchtest todir="${argo.tests.reports}/junit/output">
         <fileset dir="${argo.tests.src}">
-          <include name="org/argouml/**/TestAgainst*.java"/>
+          <include name="org/argouml/**/Test*.java"/>
         </fileset>
       </batchtest>
     </junit>
