--- a/build.xml
+++ b/build.xml
@@ -156,7 +156,7 @@ Have fun ... your Columba Team!
 			<exclude name="native/**"/>
 			<manifest>
 				<attribute name="Main-Class" value="org.columba.core.main.Main"/>
-				<attribute name="Class-Path" value="lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar lib/jwizz-0.1.1.jar lib/plastic.jar lib/jhall.jar lib/usermanual.jar /lib/forms.jar"/>
+				<attribute name="Class-Path" value="lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar lib/jwizz-0.1.1.jar lib/plastic.jar lib/jhall.jar lib/usermanual.jar lib/forms.jar"/>
 				<attribute name="Sealed" value="false"/>
 			</manifest>
 		</jar>
