Documentation XHTML conversion - Site layout is now CSS based and tableless. Docs validation task added to build process.

--- a/build.xml
+++ b/build.xml
@@ -790,6 +790,7 @@
 <target name="compile.website"
         description="Compile main website">
         <ant antfile="build-webapps.xml" target="compile.docs"/>
+        <ant antfile="build-webapps.xml" target="validate.docs"/>        
 </target>
 
 
