--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -351,8 +351,6 @@ template.TemplateList.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
 
-scarab.query.max.join=30
-
 # Max number of issues that can be be viewed simultaneously on a single page.
 scarab.issue.max.view=25
 # Max number of issues that can be be simultaneously assigned with users.
@@ -370,3 +368,6 @@ scarab.issue.max.copy=250
 #the outer joins used in Query do not appear to be as expensive.  These numbers
 #are relatively conservative.
 scarab.report.max.criteria=4
+scarab.query.max.filter_criteria=9
+scarab.query.max.join=30
+
