--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@ Have fun ... your Columba Team!
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
 	<property name="version" value="0.12.0"/>
 	<property name="dest" value="${basedir}/classes"/>
-	<property name="ownclasspath" value="${dest}:${classpath}:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.1.jar:${src}/lib/plastic.jar:${src}/lib/jhall.jar:${src}/lib/forms.jar:{$src}/lib/ristretto-1.0pre1.jar"/>
+	<property name="ownclasspath" value="${dest}:${classpath}:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.1.jar:${src}/lib/plastic.jar:${src}/lib/jhall.jar:${src}/lib/forms.jar:${src}/lib/ristretto-1.0pre1.jar"/>
 
 
 	<!-- definition of the task to check the style of the java-code -->
