Telling the ant task to inherit parent refs allows the test build file to be executed within Eclipse.
Not a huge improvement but useful nonetheless.

--- a/tests/build.xml
+++ b/tests/build.xml
@@ -63,7 +63,7 @@
   <!-- Build the parent project                                          -->
   <!-- ================================================================= -->  
   <target name="parentBuild">
-    <ant dir=".." target="build"/>
+    <ant dir=".." target="build" inheritRefs="true"/>
   </target>
 
   <!-- ================================================================= -->
