--- a/build.xml
+++ b/build.xml
@@ -557,6 +557,7 @@
        org.apache.log4j.jdbc,
        org.apache.log4j.or.sax,
        org.apache.log4j.or.jms,
+       org.apache.log4j.pattern,
        org.apache.log4j.performance,
        org.apache.log4j.rolling,
        org.apache.log4j.spi,
