--- a/src_new/build.xml
+++ b/src_new/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id: build.xml,v 1.129 2003/09/11 20:13:34 linus Exp $
+<!-- $Id: build.xml,v 1.130 2003/09/13 07:36:30 linus Exp $
 This requires ANT 1.4.1
 
 if you get a message like:
@@ -682,7 +682,7 @@ Property files to be searched:
   <!-- Run the junit tests.                                                -->
   <!-- =================================================================== -->
   <target name="tests"
-          depends="compile,junit-fetch-init,junit-get-011202-xml,junit-setup,junit-report-clean,ant.optional.init"
+          depends="compile,junit-fetch-init,junit-setup,junit-get-011202-xml,junit-get-991015-dtd,junit-report-clean,ant.optional.init"
           description="Run all tests that doesn't require any GUI components in headleass mode.">
     <!-- ant 1.4 uses printsummary="true"                          -->
     <!-- ant 1.5 allows printsummary="withOutAndErr"               -->
