Removing interface as it is overhead that is unlikely to be useful.  We can still alter the implementation through subclassing. Modified Files: * src/conf/Scarab.properties -   dataaccess.AttributeAccess.classname=org.tigris.scarab.da.AttributeAccess * src/java/org/tigris/scarab/da/AttributeAccess.java - result of merger   of interface with implementation.  The interface is now a class. Removed Files: * src/java/org/tigris/scarab/da/ScarabAttributeAccess.java - implementation   moved into AttributeAccess

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -71,7 +71,7 @@ scarab.email.moveissue.template=MoveIssue.vm
 #
 # Data Access layer services.
 #
-dataaccess.AttributeAccess.classname=org.tigris.scarab.da.ScarabAttributeAccess
+dataaccess.AttributeAccess.classname=org.tigris.scarab.da.AttributeAccess
 
 services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
 services.PullService.tool.request.l10n=org.tigris.scarab.tools.ScarabLocalizationTool
