- Internal logging is now on even after a LogManager.resetConfiguration. (Temporary code. All this will be radically changed when Domains enter the scene.)
- PropertySetter.setProperties method no longer activates the options 
of OptionHandlers. This results in slighly less confusing code. 
Changed ProppertyConfigurator to take thismodification  into account.

- Renamed test cases from XTestCase to XTest where X varies.

--- a/tests/build.xml
+++ b/tests/build.xml
@@ -142,7 +142,7 @@
     <junit printsummary="yes" fork="yes" haltonfailure="yes">
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
-      <test name="org.apache.log4j.PatternLayoutTestCase" />
+      <test name="org.apache.log4j.PatternLayoutTest" />
     </junit>
   </target>
 
