forward port from SCARAB_0_16_BRANCH Issue number: SCB868 - Having to enter script name for modules is confusing  too many users.  This patch removes the need to set url parameters for every module.  Instead,  it is set in one place in Scarab.properties.  Modified Files:  * src/conf/Scarab.properties src/conf/intake.xml - remove fields for    scheme, domain, port and scriptname  * src/java/org/tigris/scarab/om/GlobalParameter.java - remove constants for    scheme, domain, port and scriptname.  They are replaced by new constants in    ScarabConstants.  * src/java/org/tigris/scarab/om/ScarabModule.java - Modified getters for    scheme, domain, port and scriptname to retrieve the value from the    configuration files. removed setDomainInfo and its use in save method.  * src/java/org/tigris/scarab/pipeline/scarab-pipeline.xml - removed    SetModuleDomainInfoValve  * src/java/org/tigris/scarab/util/ScarabConstants.java - added constants    for the configuration file property keys: WEB_SCHEME, WEB_DOMAIN, WEB_PORT,    and WEB_SCRIPT_NAME  * src/java/org/tigris/scarab/util/ScarabLink.java - modified getServerScheme,    getServerName, getServerPort, and getScriptName to account for the    default return value from ScarabModule getters of the empty string.  * src/templates/screens/admin/ModifyModule.vm - remove input fields for    scheme, domain, port and scriptname.  Removed Files:  * src/java/org/tigris/scarab/pipeline/SetModuleDomainInfoValve.java - not    needed.  The correct values are expected to be in Scarab.properties

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -376,3 +376,19 @@ scarab.report.max.criteria=4
 scarab.query.max.filter_criteria=9
 scarab.query.max.join=30
 
+# These properties are used when generating links to scarab.  In
+# many cases, if these properties are left blank, an appropriate default will
+# be used.  But functionality which does not have access to the servlet engine
+# context/configuration will need this information to create valid links,
+# e.g.  xml import.
+# In the following url: http://my.company.com:8081/issues/id/PACS1
+# scheme=http, domain=my.company.com, port=8080, and scriptname=/issues
+# IMPORTANT NOTE: Setting these values has no effect on the servlet engine
+# and/or web server.  These values should be set to values that
+# correspond to the configuration of the web server and/or servlet engine which
+# provides access to the scarab application.
+scarab.web.scheme=
+scarab.web.domain=
+scarab.web.port=
+scarab.web.scriptname=
+
