--- a/contrib/struts-chain/build.properties.sample
+++ b/contrib/struts-chain/build.properties.sample
@@ -6,18 +6,22 @@
 # source code.  To use this file, make a copy of it in "build.properties" and
 # customize the values as required.
 #
-# $Id: build.properties.sample,v 1.2 2003/08/11 06:28:38 rleland Exp $
+# $Id: build.properties.sample,v 1.3 2003/09/19 18:56:18 husted Exp $
 #
-### Inorder to build you must have the catalina-ant.jar in your CLASSPATH
+### In order to build with Tomcat integration you must have the catalina-ant.jar in your CLASSPATH
 ### this is located under the jakarta-tomcat/server/lib directory
+
 
 # The absolute or relative pathname of the directory containing your
 # Servlet API classes JAR file (servlet.jar)
-servlet.home=/usr/local/jakarta-tomcat-4.1.18/commons/lib
+servlet.home=/usr/local/jakarta-tomcat-4.1.27/commons/lib
 
 
-# The absolute or relative pathname of the Struts 1.1 (Final Release)
+# The absolute or relative pathname of the Struts Nightly Build (2003/08/11 or later)
+struts.home=/usr/local/jakarta-struts
+
+
+# The absolute or relative pathname of the Commons Chain
 # distribution
-struts.home=/usr/local/jakarta-struts-1.1
-
+chain.home=/usr/local/jakarta-commons-sandbox/commons-chain/dist
 
