--- a/tests/build.xml
+++ b/tests/build.xml
@@ -110,6 +110,7 @@
                                      HierarchyThreshold, DefaultInit, SocketServer, 
                                      XMLLayout, AsyncAppender, ErrorHandler,
                                      OptionConverter, BoundedFIFO, 
+                                     Joran,  
                                      CyclicBuffer, OR, VariaLevelMatchFilter, 
                                      VariaLevelRangeFilter, PatternParser,
                                      LevelMatchFilter, DRFA, Plugins, 
@@ -120,6 +121,12 @@
   <!-- Longer unit tests                                                 -->
   <!-- ================================================================= -->
   <target name="longUnit" depends=""/>
+
+  <!-- ================================================================= -->
+  <!-- Joran unit tests                                                 -->
+  <!-- ================================================================= -->
+  <target name="Joran" depends="Pattern, SimpleStore, JoranParser"/>
+
 
   <!-- ================================================================= -->
   <!-- ============== Regression and Unit Tests follow ================= -->  
@@ -408,6 +415,34 @@
       <test name="org.apache.log4j.rolling.helpers.CompressTestCase" />
     </junit>
   </target>
+
+  <target name="Pattern" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false" />
+      <test name="org.apache.joran.PatternTest" />
+    </junit>
+  </target>
+
+  <target name="SimpleStore" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false" />
+      <test name="org.apache.joran.SimpleStoreTest" />
+    </junit>
+  </target>
+
+
+  <target name="JoranParser" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false" />
+      <test name="org.apache.joran.JoranParserTest" />
+    </junit>
+  </target>
+  
+  
+  
 
   <!-- ================================================================= -->
   <!-- ========================= Very long Tests ======================= -->
