--- a/src_new/build.xml
+++ b/src_new/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id: build.xml,v 1.131 2003/09/14 11:36:42 linus Exp $
+<!-- $Id: build.xml,v 1.132 2003/09/23 22:34:27 linus Exp $
 This requires ANT 1.4.1
 
 if you get a message like:
@@ -1106,7 +1106,18 @@ you will have to resurrect them using cvs update.
   <!-- Creates the whole distribution                                      -->
   <!-- =================================================================== -->
   <target name="dist-all"
-          depends="dist,dist-src,dist-lib,dist-appbund,dist-modules"/>
+          depends="dist,dist-src,dist-lib,dist-appbund,dist-modules">
+     <copy file="${argo.src.dir}/templates/release_html.template"
+           tofile="${argo.dist.dir}/index.html">
+       <filterset>
+         <filter token="VERSION" 
+                 value="${argo.build.version}"/>
+         <filter token="URLROOT"
+                 value="http://argouml.tigris.org/files/documents/4/0/argouml-${argo.build.version}"/>
+       </filterset>
+     </copy>
+
+  </target>
 
   <!-- =================================================================== -->
   <!-- Creates the whole distribution with adjusted version number         -->
